--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
   #options button {
     display: block;
     width: 80%;
-    height: 40px;
+    height: auto;
     cursor: pointer;
     margin: auto;
     margin-bottom: 10px;
